fix: data uri base64 encoded content with whitespace (#3289)

--- a/packages/rspack/tests/cases/schemes/data-imports/index.css
+++ b/packages/rspack/tests/cases/schemes/data-imports/index.css
@@ -5,4 +5,5 @@
   a: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"></svg>');
   b: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"></svg>');
   c: url('data:image/svg;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjwvc3ZnPg==');
+  d: url('data:image/svg;base64,    PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjwvc3ZnPg==');
 }
